--- a/style.css
+++ b/style.css
@@ -234,3 +234,7 @@ button:hover {
   flex-direction: column;
   gap: 1rem;
 }
+#urlSwapperSettings.hidden,
+#cacheBusterSettings.hidden {
+  display: none;
+}
