--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ h1 {
   display: none;
 }
 
-input[type=text] {
+input[type="text"] {
   width: 100%;
   padding: 8px 10px;
   border: 1px solid var(--contrast);
@@ -45,7 +45,7 @@ input[type=text] {
   outline: none;
 }
 
-input[type=text]:focus {
+input[type="text"]:focus {
   border-color: #8ab4f8;
   box-shadow: 0 0 0 3px rgba(138, 180, 248, 0.25);
 }
@@ -228,13 +228,15 @@ button:hover {
 }
 
 #urlSwapperSettings,
-#cacheBusterSettings {
+#cacheBusterSettings,
+#debugHelpersSettings {
   margin: 2rem 0;
   display: flex;
   flex-direction: column;
   gap: 1rem;
 }
 #urlSwapperSettings.hidden,
-#cacheBusterSettings.hidden {
+#cacheBusterSettings.hidden,
+#debugHelpersSettings.hidden {
   display: none;
 }
